[package]
name = "hostfxr-sys"
version = "0.2.1"
description = "FFI bindings for hostfxr."
readme = "README.md"
repository = "https://github.com/OpenByteDev/hostfxr-sys"
documentation = "https://docs.rs/hostfxr-sys"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
categories = ["external-ffi-bindings"]
keywords = ["hostfxr", "dotnet", "bindings", "coreclr"]

[dependencies]
coreclr-hosting-shared = "0.1"
dlopen = "0.1"
dlopen_derive = "0.1"

[features]
default = ["netcore3_0"]
netcore1_0 = []
netcore2_0 = ["netcore1_0"]
netcore2_1 = ["netcore2_0"]
netcore3_0 = ["netcore2_1"]
undocumented = []
doc-cfg = []
