[package]
name = "hostfxr-sys"
version = "0.10.0"
description = "FFI bindings for hostfxr."
readme = "README.md"
repository = "https://github.com/OpenByteDev/hostfxr-sys"
documentation = "https://docs.rs/hostfxr-sys"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
categories = ["external-ffi-bindings"]
keywords = ["hostfxr", "dotnet", "bindings", "coreclr"]

[dependencies]
coreclr-hosting-shared = "0.1"
dlopen2 = "0.6"
enum-map = { version = "2.6", optional = true, default-features = false }

[features]
default = ["net7_0"]
latest = ["net8_0"]
netcore1_0 = []
netcore2_0 = ["netcore1_0"]
netcore2_1 = ["netcore2_0"]
netcore3_0 = ["netcore2_1"]
net5_0 = ["netcore3_0"]
net6_0 = ["net5_0"]
net7_0 = ["net6_0"]
net8_0 = ["net7_0"]
undocumented = []
doc-cfg = []

[package.metadata.docs.rs]
features = ["latest", "doc-cfg"]
no-default-features = true
